@@ -929,12 +929,14 @@ OpenXML_TRANSLATE_FOOTNOTES=&Footnotes
 OpenXML_TRANSLATE_ENDNOTES=&Endnotes
 OpenXML_TRANSLATE_HEADERS=He&aders
 OpenXML_TRANSLATE_FOOTERS=Foote&rs
+OpenXML_TRANSLATE_DIAGRAMS=Dia&grams
 OpenXML_EXCEL=Excel
 OpenXML_TRANSLATE_EXCEL_COMMENTS=Comme&nts
 OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=&Slide Comments
 OpenXML_TRANSLATE_SLIDE_MASTERS=Sli&de Masters
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=Slide &Layouts
+OpenXML_TRANSLATE_CHARTS=C&harts
 
 OpenXML_ERROR_IN_FILE=Error in file
 
