@@ -872,12 +872,14 @@ OpenXML_TRANSLATE_FOOTNOTES=&Notes de bas de page
 OpenXML_TRANSLATE_ENDNOTES=Notes de &fin de document
 OpenXML_TRANSLATE_HEADERS=&En-t\u00eates
 OpenXML_TRANSLATE_FOOTERS=&Pieds de page
+OpenXML_TRANSLATE_DIAGRAMS=Dia&grammes
 OpenXML_EXCEL=Excel
 OpenXML_TRANSLATE_EXCEL_COMMENTS=Comme&ntaires
 OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=Commentaires des &diapositives
 OpenXML_TRANSLATE_SLIDE_MASTERS=Masque des diapositi&ves
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=M&ise en page des diapositives
+OpenXML_TRANSLATE_CHARTS=Graphi&ques
 
 OpenXML_ERROR_IN_FILE=Erreur dans le fichier
 
